nouvelle image carousel

--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -282,3 +282,9 @@ p.minus {
 .text-underline {
   text-decoration: underline;
 }
+
+.candidature-size {
+  max-height: 550px;
+  object-position: bottom;
+  object-fit: cover;
+}
