--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,12 +1,12 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide position-fixed" data-ride="carousel" data-interval="5000">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag "mecener.jpg", class:"d-block w-100", alt:"Second slide" %>
+      <%= image_tag "candidature.jpg", class:"d-block w-100 candidature-size", alt:"Second slide" %>
       <div class="carousel-caption">
         <div class="d-md-block">
-          <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn box" do %>
-          <h5><b>Le Défi a besoin de vous !</b></h5>
-          <p class="mb-0">Soutenez le projet</p>
+          <%= link_to "/inscription", class:"btn btn-secondary text-white responsive-btn box" do %>
+            <h5><b>Relevez le Défi !</b></h5>
+            <p class="mb-0">Candidatures ouvertes jusqu’au 15 décembre</p>
           <% end %>
         </div>
       </div>
@@ -15,8 +15,8 @@
       <%= image_tag "gestion.jpg", class:"d-block w-100", alt:"First slide" %>
       <div class="carousel-caption">
         <%= link_to "/pourquoi", class:"btn btn-secondary text-white responsive-btn box" do %>
-        <h5><b>140 kg de déchets par bureau</b></h5>
-        <p class="mb-0">Relevez le Défi Zéro Déchet Des Pros</p>
+          <h5><b>140 kg de déchets par bureau</b></h5>
+          <p class="mb-0">Relevez le Défi Zéro Déchet Des Pros</p>
         <% end %>
       </div>
     </div>
@@ -24,8 +24,8 @@
       <%= image_tag "mobilisation.jpg", class:"d-block w-100", alt:"Third slide" %>
       <div class="carousel-caption d-md-block">
         <%= link_to "/comment", class:"btn btn-secondary text-white responsive-btn box" do %>
-        <h5><b>Relevez le Défi !</b> </h5>
-        <p class="mb-0">Réduisez vos déchets de 10%</p>
+          <h5><b>Relevez le Défi !</b> </h5>
+          <p class="mb-0">Réduisez vos déchets de 10%</p>
         <% end %>
       </div>
     </div>
