--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -11,7 +11,8 @@
         <p><b> Offre de lancement:</b> 50% de réduction sur le tarif de base pour les 5 premiers sélectionnés.</p>
         <h3 class="mt-4 green-title">Comment candidater ?</h3>
         <p><b>1.</b> Préparez-vous à convaincre votre direction. Utilisez nos arguments page « <%= link_to "Pourquoi", pourquoi_path, class:"cool-link", target:"blank" %> » et découvrez toutes nos infos pratiques sur la page « <%= link_to "Comment", "/comment", class:"cool-link", target:"blank" %>». </p>
-        <p><b>2.</b> Remplissez votre formulaire de candidature. Prenez votre temps (estimation : 10 à 40 mn). En cliquant sur « envoyer », vous engagez votre structure à participer si votre candidature est retenue</p>
+        <p><b>2.</b> Remplissez votre formulaire de candidature. Prenez votre temps (estimation : 10 à 40 mn). En cliquant sur « envoyer », vous engagez votre structure à participer si votre candidature est retenue. Vous avez jusqu'au 15 décembre pour nous la faire parvenir.</p>
+
         <p><b>3.</b> L’équipe Défi sélectionne une quinzaine de structures en se basant sur la motivation et la diversité des profils. Vous serez informé·e·s le 18 décembre de l’issue donnée à votre candidature.</p>
         <p><b>A tout moment, notre équipe se tient à votre disposition pour répondre à vos questions.</b> </p>
       </div>
