--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -5,7 +5,7 @@
       <div class="carousel-caption">
         <div class="d-md-block">
           <%= link_to "/inscription", class:"btn btn-secondary text-white responsive-btn box" do %>
-            <h5><b>Relevez le Défi !</b></h5>
+            <h5><b>Le Défi : 2ème édition !</b></h5>
             <p class="mb-0">Candidatures ouvertes jusqu’au 15 décembre</p>
           <% end %>
         </div>
